
Fri Nov 23 17:18:14 CST 2001 Linas Vepstas <linas@linas.org>

        * doc/C/gtt.sgml: update maintainer list, add warning
          about out-of-date documentation.

	* *.c, glade/*.glade: rename "Task" to the more 
          correct "Diary Entry"

Mon Nov  5 13:23:02 CST 2001 Linas Vepstas <linas@linas.org>

	* ghtml.c: replace obsolete guile macro with supported
	  function. (needed for guile-1.5 comaptibility).

Thu Oct 18 16:31:35 CDT 2001  Linas Vepstas <linas@linas.org>

        * main.c, file-io.c patch from Jeff Putsch
          <putsch@fiber.mxim.com> to fix coredump on initial
          startup.

Fri Oct 12 14:01:25 CDT 2001  Linas Vepstas <linas@linas.org>

        * ctree.c, ctree.h, prefs.c: bugfix: redraw columns when
          changing column visibility.

        * ctree.c: bugfix: set rational default column widths.
                   bugfix: print start, end, due dates correctly.
                   bugfix: fix column titles, add tooltips.

        * props-proj.c: bugfix: fix property box sensitivity.
          What's up with that anthrax shit?  That's some bad shit
          comin down.

        * help/C/gtt.1: update the man page.

Fri Oct 05 11:20:18 2001  George Lebl <jirka@5z.com>

	* Makefile.am, journal.c, plug-in.c, prefs.c, props-invl.c,
	  props-proj.c, props-task.c, util.[ch]:  Add a function for 
	  getting the GladeXML from the right directory.

	* glade/Makefile.am: dist all glade files

Thu Oct 04 21:37:11 2001  George Lebl <jirka@5z.com>

	* ghtml.c: more 64bit fixes.  Guile uses int and not size_t for the
	  sizes of strings apparently.  It's kind of evil.

Thu Oct 04 21:23:01 2001  George Lebl <jirka@5z.com>

	* Makefile.am: fix make dist

	* journal.c: fix 64bit issue with saving, and hide the print button
	  for now since it doesn't work yet

	* main.c: remove the initial warning, this is a stable gnome-utils
	  release

Wed Sep 26 18:45:32 CDT 2001  Linas Vepstas <linas@linas.org>
