@@ -1,4 +1,10 @@
 
+
+Wed Nov 28 12:12:44 CST 2001 Linas Vepstas <linas@linas.org>
+
+	* Makefile.am, journal.c: patch from Derek Atkins
+	  to search 'unusual' install paths for data directories.
+
 Fri Nov 23 17:18:14 CST 2001 Linas Vepstas <linas@linas.org>
 
         * doc/C/gtt.sgml: update maintainer list, add warning
